[gd_scene load_steps=2 format=3 uid="uid://j1xi0iyg0khu"]

[ext_resource type="Script" path="res://Scripts/Slingshot.gd" id="1_kpeeu"]

[node name="Slingshot" type="Node2D"]
script = ExtResource("1_kpeeu")

[node name="LeftString" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-200, -100, 0, 0)

[node name="RightString" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(200, -100, 0, 0)

[node name="LeftEnd" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-200, -100)

[node name="RightEnd" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(200, -100)

[node name="Centre" type="Marker2D" parent="."]
unique_name_in_owner = true
